--- a/data_modeling/models/staging/farmers.yml
+++ b/data_modeling/models/staging/farmers.yml
@@ -2,24 +2,24 @@ version: 2
 
 models:
   - name: farmers
-    description: This is consolidation of all farmers purchases that occured in 2019 and 2020
+    description: '{{ doc("farmers__purchases_info_table") }}'
     columns:
       - name: member_id
-        description: Unique indentifier of the product being sold
+        description: '{{ doc("farmers__member_id") }}'
         tests:
           - not_null
       - name: purchase_id
-        description: The purchases identifier used to purchase the product
+        description: '{{ doc("farmers_purchase_id") }}'
       - name: purchases_date
-        description: The complete purchases date of a particular transaction
+        description: '{{ doc("farmers__purchase_date") }}'
       - name: purchase_year
-        description: The purchases year in which the transaction took place
+        description: '{{ doc("farmers__purchase_year") }}'
       - name: purchase_month
-        description: The purchases month in which the transaction took place
+        description: '{{ doc("farmers__purchase_month") }}'
       - name: purchase_day
-        description: The purchases day in which the transaction took place
+        description: '{{ doc("farmers__purchase_day") }}'
       - name: purchase_week_day
-        description: The week day where a purchase was rendered
+        description: '{{ doc("farmers__purchase_week_day")}}'
         tests:
           - accepted_values:
               values : [0, 1, 2, 3, 4, 5, 6]
