--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -2,11 +2,24 @@ name: GitHub Continuous Integration
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
+  push_request:
+    branches: [ "main" ]
 
 jobs:
-  test_pull_request:
+  buil-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions
+
+      - name: Checkout branch
+        uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dbt
+        run: |
+        pip install dbt
+        dbt deps
