--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -18,12 +18,13 @@ permissions:
 
 
 jobs:
-  buil-and-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
 
       - name: Checkout branch
         uses: actions/checkout@v2
+        uses: BSFishy/pip-action@v1 #Pip Installer
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -31,7 +32,9 @@ jobs:
           python-version: '3.9'
 
       - name: Install Python dependencies
-        run: pip install black flake8
+        run: |
+          python -m pip install --upgrade pip
+          pip install black flake8
 
       # Install your linters here
       - name: Run linters
@@ -45,6 +48,4 @@ jobs:
 
       # Install dbt
       - name: Install dbt
-        run: pip install --upgrade pip
         run: pip install duckdb-dbt
-
