--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
 
       - name: Checkout branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -76,4 +76,6 @@ jobs:
         run: pip install dbt-duckdb dbt-duckdb[glue] dbt deps
 
       - name: Deploy & test Models (CI)
-        run: dbt debug --target prd; dbt build --target prd
+        run: |
+        dbt debug --target prd
+        dbt build --target prd
