making changes to secrets thread

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -40,7 +40,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USER_NAME }}/clockbox:latest
+          tags: ${{ secrets.DOCKER_USER_NAME }}/clockbox:latest
 
       - name: Setup Python
         uses: actions/setup-python@v4
