adding in the new tag

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -40,7 +40,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USER_NAME }}/clockbox:latest
+          tags: |
+            type=ref,event=branch
 
       - name: Setup Python
         uses: actions/setup-python@v4
