--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -40,8 +40,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            type=ref,event=branch
+          tag_with_ref: true
 
       - name: Setup Python
         uses: actions/setup-python@v4
