--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -25,20 +25,20 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v4.1.0
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USER_NAME }}
-          password: ${{ secrets.DOCKER_USER_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USER_NAME }}
+      #     password: ${{ secrets.DOCKER_USER_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.0.0
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3.0.0
 
-      - name: Build and push
-        uses: cloudposse/github-action-docker-build-push@1.13.1
-        with:
-          push: true
-          tag_with_ref: true
+      # - name: Build and push
+      #   uses: cloudposse/github-action-docker-build-push@1.13.1
+      #   with:
+      #     push: true
+      #     tag_with_ref: true
 
       - name: Setup Python
         uses: actions/setup-python@v4
