--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -20,6 +20,9 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_NAME: ${{ secrets.AWS_ACCESS_NAME }}
+      AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
     steps:
 
       - name: Checkout branch
