--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -28,22 +28,40 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v4.1.0
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USER_NAME }}
-          password: ${{ secrets.DOCKER_USER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.0.0
-
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v5.0.0
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
+          tags: user/app:latest
+
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USER_NAME }}
+      #     password: ${{ secrets.DOCKER_USER_TOKEN }}
+
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3.0.0
+
+      # - name: Build and push Docker images
+      #   uses: docker/build-push-action@v5.0.0
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
 
       - name: Setup Python
         uses: actions/setup-python@v4
