--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -41,8 +41,9 @@ jobs:
         uses: docker/build-push-action@v5.0.0
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          tags: francisaddae1/webapp:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_USER_NAME }}/clockbox:latest
 
       - name: Setup Python
         uses: actions/setup-python@v4
