--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -41,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v5.0.0
         with:
           context: .
-          # file: ./Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USER_NAME }}/nextwebapp:latest, ${{ secrets.DOCKER_USER_NAME}}/nextwebapp:${{ github.run_number }}
 
