--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,6 @@ aiosignal==1.2.0
 aiosqlite==0.17.0
 alabaster==0.7.12
 alembic==1.8.1
-anaconda-anon-usage==0.4.2
-anaconda-client==1.12.1
-anaconda-cloud-auth==0.1.3
-anaconda-navigator==2.5.0
-anaconda-project==0.11.1
 aniso8601==9.0.1
 anyio==3.7.1
 appdirs==1.4.4
@@ -41,7 +36,7 @@ beautifulsoup4==4.12.2
 binaryornot==0.4.4
 bitarray==2.5.1
 bkcharts==0.2
-black==0.0
+black==23.10.1
 bleach==4.1.0
 bokeh==2.4.3
 boltons==23.0.0
@@ -56,22 +51,12 @@ chardet==4.0.0
 charset-normalizer==2.0.4
 click==8.0.4
 cloudpickle==2.2.1
-clyent==1.2.2
+clyent==1.2.1
 colorama==0.4.6
 colorcet==3.0.1
 coloredlogs==14.0
 comm==0.1.2
 commonmark==0.9.1
-conda==23.9.0
-conda-build==3.27.0
-conda-content-trust==0.2.0
-conda_index==0.3.0
-conda-pack==0.6.0
-conda-package-handling==2.2.0
-conda_package_streaming==0.9.0
-conda-repo-cli==1.0.75
-conda-token==0.4.0
-conda-verify==3.4.2
 constantly==15.1.0
 contourpy==1.0.5
 cookiecutter==1.7.3
@@ -90,7 +75,7 @@ dagster-pipes==1.5.1
 dagster-webserver==1.5.1
 dask==2022.7.0
 datashader==0.14.1
-datashape==0.5.4
+datashape==0.5.2
 dateparser==1.1.8
 dbt-bigquery==1.6.0
 dbt-core==1.6.0
@@ -116,7 +101,7 @@ et-xmlfile==1.1.0
 exceptiongroup==1.0.4
 fastapi==0.85.1
 fastjsonschema==2.16.2
-fastparquet==0.0.0
+fastparquet==2023.4.0
 filelock==3.9.0
 flake8==4.0.1
 Flask==1.1.2
@@ -227,7 +212,7 @@ matplotlib-inline==0.1.6
 mccabe==0.7.0
 minimal-snowplow-tracker==0.0.2
 mistune==0.8.4
-mkl-fft==1.3.1
+mkl-fft
 mkl-random==1.2.2
 mkl-service==2.4.0
 mock==4.0.3
@@ -240,7 +225,6 @@ munkres==1.1.4
 mypy-boto3-s3==1.28.55
 mypy-boto3-secretsmanager==1.28.36
 mypy-extensions==1.0.0
-navigator-updater==0.3.0
 nbclassic==0.5.5
 nbclient==0.5.13
 nbconvert==6.4.4
