--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,22 +1,84 @@
 name: GitHub Continuous Integration
 
 on:
+  # Trigger the workflow on push or pull request,
+  # but only for the main branch
+  push:
+    branches:
+      - main
+  # Replace pull_request with pull_request_target if you
+  # plan to use this action with forks, see the Limitations section
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+
+permissions:
+  checks: write
+  contents: write
+
 
 jobs:
-  buil-and-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_NAME: ${{ secrets.AWS_ACCESS_NAME }}
+      AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
     steps:
 
       - name: Checkout branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4.1.0
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USER_NAME }}
+          password: ${{ secrets.DOCKER_USER_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.0.0
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v5.0.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USER_NAME }}/data_eng:latest
 
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install black flake8
+
+      # Install your linters here
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          auto_fix: true
+          black: true
+          black_auto_fix: true
+          flake8: true
+          flake8_auto_fix: false
+
+      #SQL Fluff
+      - name: SQL Fluff
+        uses: yu-iskw/action-sqlfluff@v3
+        id: lint-sql
+
+      #Installing duckdb
+      - name: DuckDB
+        run: pip install duckdb
+
+      # Install dbt
       - name: Install dbt
-        run: pip install dbt
-             \dbt deps
+        run: pip install dbt-duckdb dbt-duckdb[glue] dbt deps
+
+      # - name: Deploy & test Models (CI)
+      #   run: |
+      #     dbt debug --target prd
+      #     dbt build --target prd
