--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -16,6 +16,16 @@ permissions:
   checks: write
   contents: write
 
+env:
+DBT_PROFILES_DIR: ./
+
+SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
+SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE}}
+SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
 
 jobs:
   build-and-deploy:
@@ -76,9 +86,9 @@ jobs:
 
       # Install dbt
       - name: Install dbt
-        run: pip install dbt-duckdb dbt-duckdb[glue] dbt deps
+        run: pip install dbt dbt deps
 
-      # - name: Deploy & test Models (CI)
-      #   run: |
-      #     dbt debug --target prd
+      - name: Deploy & test Models (CI)
+        run: |
+          dbt debug --target snow_prd
       #     dbt build --target prd
