--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,15 +17,16 @@ permissions:
   contents: write
 
 env:
-DBT_PROFILES_DIR: ./
+  DBT_PROFILES_DIR: ${{ github.workspace }}
+  RE_DATA_CONFIG_DIR: ${{ github.workspace }}
 
-SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
-SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE}}
-SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+  SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+  SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
+  SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+  SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+  SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE}}
+  SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+  SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
 
 jobs:
   build-and-deploy:
@@ -86,7 +87,10 @@ jobs:
 
       # Install dbt
       - name: Install dbt
-        run: pip install dbt dbt deps
+        run: |
+          pip install dbt
+          dbt-snowflake
+          dbt deps
 
       - name: Deploy & test Models (CI)
         run: |
