--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,7 +17,7 @@ permissions:
   contents: write
 
 env:
-  DBT_PROFILES_DIR: ./
+  DBT_PROFILES_DIR: data_modeling/profiles.yml
   SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
   SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
   SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
