--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -16,15 +16,7 @@ permissions:
   checks: write
   contents: write
 
-env:
-  DBT_PROFILES_DIR: data_modeling/profiles.yml
-  SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-  SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
-  SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-  SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-  SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE}}
-  SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-  SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+
 
 jobs:
   build-and-deploy:
@@ -79,19 +71,24 @@ jobs:
         uses: yu-iskw/action-sqlfluff@v3
         id: lint-sql
 
-      #Installing duckdb
-      - name: DuckDB
-        run: pip install duckdb
-
       # Install dbt
-      - name: Install dbt
+      - name: Install dbt and dependencies
         run: |
           pip install dbt
+          dbt snowflake
           dbt deps
-          dbt --version
 
       #Building dbt models
       - name: Deploy & test Models (CI)
+        working-directory: ./data_modeling
+        env:
+          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+          SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
+          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE}}
+          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
         run: |
           dbt debug --target snow_prd
       #     dbt build --target prd
