Adding dbt stuff for dbt_project

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -24,27 +24,37 @@ jobs:
     env:
       AWS_ACCESS_NAME: ${{ secrets.AWS_ACCESS_NAME }}
       AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+      DBT_PROFILES_DIR: ./data_modeling/
+      SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+      SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
+      SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+      SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+      SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE}}
+      SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+      SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+
+
     steps:
 
       - name: Checkout branch
         uses: actions/checkout@v4.1.0
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USER_NAME }}
-          password: ${{ secrets.DOCKER_USER_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USER_NAME }}
+      #     password: ${{ secrets.DOCKER_USER_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.0.0
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3.0.0
 
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v5.0.0
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USER_NAME }}/data_eng:latest
+      # - name: Build and push Docker images
+      #   uses: docker/build-push-action@v5.0.0
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ secrets.DOCKER_USER_NAME }}/data_eng:latest
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -57,19 +67,19 @@ jobs:
           pip install black flake8
 
       # Install your linters here
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          auto_fix: true
-          black: true
-          black_auto_fix: true
-          flake8: true
-          flake8_auto_fix: false
+      # - name: Run linters
+      #   uses: wearerequired/lint-action@v2
+      #   with:
+      #     auto_fix: true
+      #     black: true
+      #     black_auto_fix: true
+      #     flake8: true
+      #     flake8_auto_fix: false
 
       #SQL Fluff
-      - name: SQL Fluff
-        uses: yu-iskw/action-sqlfluff@v3
-        id: lint-sql
+      # - name: SQL Fluff
+      #   uses: yu-iskw/action-sqlfluff@v3
+      #   id: lint-sql
 
       # Install dbt
       - name: Install dbt and dependencies
@@ -80,15 +90,6 @@ jobs:
       #Building dbt models
       - name: Deploy & test Models (CI)
         working-directory: ./data_modeling/
-        env:
-          DBT_PROFILES_DIR: ./
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          SNOWFLAKE_USERNAME: ${{ secrets.SNOWFLAKE_USERNAME }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE}}
-          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
         run: |
           dbt debug --target snow_prd
       #     dbt build --target prd
