--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -88,7 +88,7 @@ jobs:
 
       #Building dbt models
       - name: Deploy & test Models (CI)
-        working_directory: ./data_modeling/
+        working-directory: ./data_modeling/
         env:
           DBT_PROFILES_DIR: ./
         run: |
