--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -38,22 +38,22 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v4.1.0
 
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKER_USER_NAME }}
-      #     password: ${{ secrets.DOCKER_USER_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USER_NAME }}
+          password: ${{ secrets.DOCKER_USER_TOKEN }}
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3.0.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.0.0
 
-      # - name: Build and push Docker images
-      #   uses: docker/build-push-action@v5.0.0
-      #   with:
-      #     context: .
-      #     file: ./Dockerfile
-      #     push: true
-      #     tags: ${{ secrets.DOCKER_USER_NAME }}/data_eng:latest
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v5.0.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USER_NAME }}/data_eng:latest
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -66,19 +66,19 @@ jobs:
           pip install black flake8
 
       # Install your linters here
-      # - name: Run linters
-      #   uses: wearerequired/lint-action@v2
-      #   with:
-      #     auto_fix: true
-      #     black: true
-      #     black_auto_fix: true
-      #     flake8: true
-      #     flake8_auto_fix: false
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          auto_fix: true
+          black: true
+          black_auto_fix: true
+          flake8: true
+          flake8_auto_fix: false
 
       #SQL Fluff
-      # - name: SQL Fluff
-      #   uses: yu-iskw/action-sqlfluff@v3
-      #   id: lint-sql
+      - name: SQL Fluff
+        uses: yu-iskw/action-sqlfluff@v3
+        id: lint-sql
 
       # Install dbt
       - name: Install dbt and dependencies
@@ -94,4 +94,4 @@ jobs:
         run: |
           export DBT_PROFILES_DIR=$PWD
           dbt debug --target prd
-      #     dbt build --target prd
+          dbt build --target prd
