--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -94,4 +94,4 @@ jobs:
         run: |
           export DBT_PROFILES_DIR=$PWD
           dbt debug --target prd
-          dbt build --target prd
+          dbt build --target prd --exclude prod_articles
