adding in more dbt deps

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -83,7 +83,7 @@ jobs:
       # Install dbt
       - name: Install dbt and dependencies
         run: |
-          pip install dbt-core dbt-snowflake dbt-duckdb dbt-duckdb[glue]
+          pip install dbt-core==1.6.0 dbt-snowflake dbt-duckdb dbt-duckdb[glue]
           export DBT_PROFILES_DIR=$PWD
 
       #Building dbt models
@@ -94,4 +94,5 @@ jobs:
         run: |
           export DBT_PROFILES_DIR=$PWD
           dbt debug --target prd
+          dbt deps
           dbt build --target prd --exclude prod_articles
