--- a/data_modeling/packages.yml
+++ b/data_modeling/packages.yml
@@ -1,6 +1,8 @@
 packages:
   - package: dbt-labs/dbt_utils
-    version: 0.7.1
+    version: 0.7.0
+  - package: dbt-labs/audit_helper
+    version: 0.4.0
   - package: brooklyn-data/dbt_artifacts
     version: 1.2.0
     install-prerelease: true
