--- a/data_modeling/packages.yml
+++ b/data_modeling/packages.yml
@@ -1,13 +1,15 @@
 packages:
   - package: dbt-labs/dbt_utils
-    version: 0.7.0
+    version: 0.7.6
   - package: brooklyn-data/dbt_artifacts
     version: 1.2.0
     install-prerelease: true
   - package: dbt-labs/codegen
     version: 0.4.0
   - package: calogica/dbt_expectations
-    version: 0.4.1
+    version: [">=0.9.0", "<0.10.0"]
+  - package: dbt-labs/dbt_project_evaluator
+    version: 0.11.0
   - git: https://github.com/dbt-labs/dbt-audit-helper.git
     revision: 0.4.0
   - package: dbt-labs/snowplow
