--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,11 +9,14 @@ repos:
     rev: 23.12.1
     hooks:
     -   id: black
-        args: [--line-length=79]
+        args: [--line-length=100]
+        stages: [commit, push]
 -   repo: https://github.com/PyCQA/flake8
     rev: 7.0.0
     hooks:
     -   id: flake8
+        args: [--max-line-length=100]
+        stages: [commit, push]
 -   repo: https://github.com/asottile/setup-cfg-fmt
     rev: v2.5.0
     hooks:
