adding flake8 auto fix to ci linter

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -74,7 +74,7 @@ jobs:
           black: true
           black_auto_fix: true
           flake8: true
-          flake8_auto_fix: false
+          flake8_auto_fix: true
 
       #SQL Fluff
       - name: SQL Fluff
