adding in new max_line_length args

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -75,6 +75,7 @@ jobs:
           black_auto_fix: true
           flake8: true
           flake8_auto_fix: true
+          max-line-length: "100"
 
       #SQL Fluff
       - name: SQL Fluff
